# spot-on_schema

./: build.pipeline.yml  pyproject.toml  requirements.txt  setup.py
spot_on_schema/: models.py
spot_on_schema.egg-info/: PKG-INFO  SOURCES.txt
