[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spot-on_schema"
version = "0.0.1"
description = "Shared SQLAlchemy schema models for spot-on projects"
authors = [
    { name="Gustaf B", email="gustaf.bengtsson@rise.se" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "SQLAlchemy>=1.4"
]

[tool.setuptools.packages.find]
where = ["."]